# geant4-neutron-sim2

./: README.md
geant/: mein-analyze.py
geant/15x30-Tungsten/: neutron_count.txt  neutron_data.csv
geant/15x50-Plumbum/: neutron_data.csv  neutron_data.py  neutron_energy.csv
geant/15x60-Copper/: neutron_count.txt  neutron_data.csv  neutron_energy.csv
geant/15x60-Plumbum/: neutron_count.txt  neutron_energy.csv
geant/15x60-Tungsten/: neutron_count.txt  neutron_data.csv  neutron_energy.csv
geant4-sim/: CMakeLists.txt  main.cc
geant4-sim/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
geant4-sim/include/geant/15x30-Tungsten/: neutron_energy.csv
geant4-sim/include/geant/15x50-Plumbum/: neutron_count.txt  neutron_energy.py
geant4-sim/include/geant/15x60-Plumbum/: neutron_data.csv
geant4-sim/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
